Updated Portfolio projects

--- a/blog-kouma-nosoft.html
+++ b/blog-kouma-nosoft.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>N.L | Stage pro (B2)</title>
+    <title>N.L | Expérience professionnelle (alternance)</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -24,8 +24,6 @@
 </head>
 
 <body>
-
-
     <nav class="navbar ftco-navbar-light">
         <!-- navbar-expand-lg  -->
         <div class="container-xl">
@@ -55,8 +53,8 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-end justify-content-center">
                 <div class="col-md-9 pt-5 text-center">
-                    <p class="breadcrumbs"><span class="me-2"><a href="index.html">Accueil <i class="fa fa-chevron-right"></i></a></span> <span class="me-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Bachelor 2 : mon expérience professionnelle chez Flincy<i class="fa fa-chevron-right"></i></span></p>
-                    <h1 class="mb-0 bread">Mon stage professionnel chez Flincy</h1>
+                    <p class="breadcrumbs"><span class="me-2"><a href="index.html">Accueil <i class="fa fa-chevron-right"></i></a></span> <span class="me-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Alternance : mon expérience professionnelle chez NoSoft<i class="fa fa-chevron-right"></i></span></p>
+                    <h1 class="mb-0 bread">Une application cross-platform développée avec l'outil no-code NoSoft</h1>
                 </div>
             </div>
         </div>
@@ -67,85 +65,32 @@
             <div class="row g-lg-5">
                 <div class="col-lg-8 blog-single">
                     <p>
-                        <img src="images/flincy_banner.webp" alt="" class="img-fluid">
+                        <img src="images/kouma-banner.webp" alt="" class="img-fluid">
                     </p>
 
                     <p class="pt-3">
-                        Entre octobre 2021 et janvier 2022, j'ai été sollicité par la startup Flincy pour l'aider à développer une application mobile prototype en tant que développeur web stagiaire. 
-                        L'occasion pour moi de me professionaliser et de monter en compétences.
+                        J'ai effectué ma 3ème année de Bachelor en alternance au sein de l'extraordinaire start-up <strong>NoSoft</strong>.
+                        En tant que développeur et UX Designer, j'ai pu concevoir de A à Z une application pour le compte d'un client extérieur, et la développer selon ses exigences avec l'outil no-code NoSoft développé en interne.
                     </p>
 
-                    <h2 class="mb-3">Ma mission</h2>
-
-                    <p>
-                        <strong>Flincy</strong> est une jeune startup dans le domaine de la livraison à domicile. Elle propose à ses clients la possibilité de commander des produits locaux grâce à des partenariats avec des épiciers.
+                    <p class="pt-3">
+                        Le client (Bory, que je remercie pour sa confiance) souhaitait une application cross-platform disponible sur le Play Store de Google pour Android et l'App Store d'Apple pour iOS.
+                        L'application, dénommée <strong>Kouma</strong>, est une application d'apprentissage des dialectes africains, tels que le soninké, le comorien, le swahili ou encore le bambara. 
                     </p>
 
-                    <p>
-                        Dans le cadre du développement de la startup, j'ai été missionné pour réaliser une application web pour mobiles pouvant servir de proof-of-concept. La technologie front, <strong>React</strong>, m'a été imposée. J'ai en revanche eu carte blanche pour les technologies back et pour la base de données. J'ai choisi d'utiliser <strong>NodeJS</strong> pour le serveur et <strong>MongoDB</strong> pour créer et héberger la base de données en ligne.
+                    <p class="pt-3">
+                        L'utilisateur peut parcourir la liste des dialectes disponibles, explorer les leçons, et faire défiler les chapitres pour apprendre de nouveaux mots et de nouveaux concepts.
+                        Le client, Bory, peut alimenter sa base de données grâce à un fichier CSV et une interface web conçue pour lui.
                     </p>
-
-
-                    <h2 class="mb-3">Le projet</h2>
-                    <p class="mb-5">
-                        L'application possède une <i>landing page</i> ainsi qu'une page d'inscription et une page de connexion.
-                    </p>
-
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <img src="images/Flincy/Flincy_Landing.png" alt="" class="img-fluid">
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="images/Flincy/Flincy_Login.png" alt="" class="img-fluid">
-                            </div>
-                        </div>
-
+                    
                     <p class="my-5">
-                        Sur la page d'accueil, une liste de produits locaux est mise en avant et des carousels permettent de faire défiler des recettes ou des paniers de produits à composer. Une barre de navigation permet d'accéder à différentes sections.
-                    </p>
-
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <img src="images/Flincy/Flincy_Home-1.png" alt="" class="img-fluid">
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="images/Flincy/Flincy_Home-2.png" alt="" class="img-fluid">
-                            </div>
-                        </div>
-
-                    <p class="my-5">
-                        Chaque produit possède sa page avec illustration, description, prix et un bouton pour ajouter le produit aux favoris ou au panier.
-                    </p>
-
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <img src="images/Flincy/Flincy_Ingredient-2.png" alt="" class="img-fluid">
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="images/Flincy/Flincy_Modal.png" alt="" class="img-fluid">
-                            </div>
-                        </div>
-
-                    <p class="my-5">
-                        La page "Panier" récapitule les produits qui ont été ajoutés et la page "Expédition" permet de choisir les détails pour le paiement et l'expédition de la commande.
-                    </p>
-
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <img src="images/Flincy/Flincy_Cart.png" alt="" class="img-fluid">
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="images/Flincy/Flincy_Shipping.png" alt="" class="img-fluid">
-                            </div>
-                        </div>
-
-                    <p class="my-5 py-2">
-                        Le projet complet est accessible sur <strong class="gradient-text">GitHub</strong> <a href="https://github.com/nicolas-lepinay/Flincy" target="_blank" title="Flincy"><i class="fa fa-github"></i></a> en suivant <a href="https://github.com/nicolas-lepinay/Flincy" target="_blank" title="Flincy">ce lien</a>.
+                        L'application <i>Kouma</i> est téléchargeable sur <a href="https://play.google.com/store/apps/details?id=com.koumaapp.kouma" target="_blank" title="Kouma sur le Play Store"><strong class="gradient-text">le Play Store</strong> <i class="fa fa-android"></i></a> pour Android et sur <a href="https://apps.apple.com/us/app/kouma/id6446779259" target="_blank" title="Kouma sur l'App Store"><strong class="gradient-text">l'App Store</strong> <i class="fa fa-apple"></i></a> pour iOS.
                     </p>
 
                     <div class="tag-widget post-tag-container mb-5 mt-5">
                         <div class="tagcloud">
-                            <a href="#" class="tag-cloud-link">stage</a>
+                            <a href="#" class="tag-cloud-link">expérience pro</a>
+                            <a href="#" class="tag-cloud-link">développement mobile</a>
                         </div>
                     </div>
 
@@ -161,11 +106,11 @@
                 <div class="sidebar-box">
                     <h3>Articles récents</h3>
                     <div class="block-21 mb-4 d-flex">
-                        <a class="blog-img me-4" style="background-image: url(images/rem-em-px.webp);"></a>
+                        <a class="blog-img me-4" style="background-image: url(images/project-b2-flincy.webp);"></a>
                         <div class="text">
-                            <h3 class="heading"><a href="blog-rem-em-px.html">CSS : rem, em ou pixels ?</a></h3>
+                            <h3 class="heading"><a href="blog-stage-b2.html">B2 : mon expérience professionnelle</a></h3>
                             <div class="meta">
-                                <div><a href="#"><span class="fa fa-calendar"></span> 9 août 2021</a></div>
+                                <div><a href="#"><span class="fa fa-calendar"></span> 16 juillet 2022</a></div>
                                 <div><a href="#"><span class="fa fa-user"></span> Nicolas Lépinay</a></div>
                                 <!-- <div><a href="#"><span class="fa fa-comment"></span> 19</a></div> -->
                             </div>
@@ -191,35 +136,11 @@
                             <div class="meta">
                                 <div><a href="#"><span class="fa fa-calendar"></span> 29 juillet 2021</a></div>
                                 <div><a href="#"><span class="fa fa-user"></span> Nicolas Lépinay</a></div>
-                                <!-- <div><a href="#"><span class="fa fa-comment"></span> 19</a></div> -->
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <!-- 
-                    <div class="sidebar-box">
-                        <h3>Tag Cloud</h3>
-                        <div class="tagcloud">
-                            <a href="#" class="tag-cloud-link">work</a>
-                            <a href="#" class="tag-cloud-link">graphic</a>
-                            <a href="#" class="tag-cloud-link">design</a>
-                            <a href="#" class="tag-cloud-link">web</a>
-                            <a href="#" class="tag-cloud-link">apps</a>
-                            <a href="#" class="tag-cloud-link">branding</a>
-                            <a href="#" class="tag-cloud-link">tools</a>
-                            <a href="#" class="tag-cloud-link">HTML</a>
-                            <a href="#" class="tag-cloud-link">CSS3</a>
-                        </div>
-                    </div> -->
-
-                <!-- <div class="sidebar-box">
-                        <h3>Paragraph</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
-                    </div> -->
-
             </div>
-
         </div>
         </div>
     </section>
