--- a/experience.html
+++ b/experience.html
@@ -83,14 +83,14 @@
                             <span class="position"><i class="ion-ios-pin me-2"></i>Aix Ynov Campus</span>
                             <div class="mt-4 d-flex flex-column">
                                 <span><strong>Développement web</strong></span>
-                                <span class="px-3">• Front-end : HTML, SCSS, JavaScript, React, Next.js</span>
+                                <span class="px-3">• Front-end : HTML, SCSS, TypeScript, React, Next.js, Vue.js</span>
                                 <span class="px-3">• Back-end : Go, NodeJS, PHP 8, Symfony</span>
                                 <span class="px-3">• Base de données : MySQL, SQLite, MongoDB, Firebase</span>
                                 
                                 <span class="mt-2"><strong>Développement logiciel</strong></span>
-                                <span class="px-3">C#, C++, Java, Python</span>
+                                <span class="px-3">C#, C++, Java, Python, .NET (WPF)</span>
                                 <span class="mt-2"><strong>Développement mobile</strong></span>
-                                <span class="px-3">Kotlin, React Native</span>
+                                <span class="px-3">Kotlin, React Native, Ionic</span>
                                 <span class="mt-2"><strong>Infrastructure & Réseau</strong></span>
                             </div>
                         </div>
@@ -113,8 +113,22 @@
                     <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                         <div class="w-100">
                             <div class="icon"><span class="flaticon-work-from-home"></span></div>
+                            <span class="date">09/2022- 05/2023</span>
+                            <h2>Développeur logiciel et mobile</h2>
+                            <span class="position"><i class="ion-ios-pin me-2"></i>NoSoft</span>
+                            <p class="mt-4">
+                                Développement d'un outil <strong>no-code</strong> de création d'applications. 
+                                <br>Programmation en <strong>C#</strong> avec <strong>Unity</strong>. 
+                                <br>Développement et publication sur les stores d'applications mobiles pour <strong>Android</strong> et <strong>iOS</strong>. 
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                        <div class="w-100">
+                            <div class="icon"><span class="flaticon-work-from-home"></span></div>
                             <span class="date">10/2021- 01/2022</span>
-                            <h2>Développeur full stack (stage)</h2>
+                            <h2>Développeur web full stack (stage)</h2>
                             <span class="position"><i class="ion-ios-pin me-2"></i>Flincy</span>
                             <p class="mt-4">
                                 Création d’un prototype d’une application de livraison. 
@@ -135,7 +149,7 @@
                         </div>
                     </div>
 
-                    <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                    <!-- <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                         <div class="w-100">
                             <div class="icon"><span class="flaticon-work-from-home"></span></div>
                             <span class="date">2016 - 2018</span>
@@ -143,7 +157,7 @@
                             <span class="position"><i class="ion-ios-pin me-2"></i>Lycée Cézanne, Aix-en-Provence</span>
                             <p class="mt-4">Assistant d'une professeure de biologie en situation de handicap.</p>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                         <div class="w-100">
