--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
                         <div class="icon"><span class="flaticon-web-programming"></span></div>
                         <div class="text">
                             <h2>Développement web</h2>
-                            <p>HTML, SCSS, React, PHP, Go, MySQL, MongoDB</p>
+                            <p>HTML, SCSS, React, Vue, PHP, Go, MySQL, MongoDB</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         <div class="icon"><span class="flaticon-app-development"></span></div>
                         <div class="text">
                             <h2>Développement mobile</h2>
-                            <p>Kotlin, React Native</p>
+                            <p>Kotlin, React Native, Ionic</p>
                         </div>
                     </div>
                 </div>
