--- a/work.html
+++ b/work.html
@@ -64,10 +64,39 @@
             <div class="row">
 
                 <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/projet-pro-kouma.webp);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="blog-kouma-nosoft.html" target="_blank">Kouma : app mobile</a></h3>
+                            <span>Expérience professionnelle</span>
+                            <br>
+                            <span>nosoft</span>
+                            <br>
+                            <br>
+                            <span><a href="https://play.google.com/store/apps/details?id=com.koumaapp.kouma" target="_blank" title="Play Store" style="color: inherit"><i class="fa fa-android" style="color: rgb(220, 220, 220)"></i> Google PlayStore</a></span>
+                            <br>
+                            <span><a href="https://apps.apple.com/us/app/kouma/id6446779259" target="_blank" title="App Store" style="color: inherit"><i class="fa fa-apple" style="color: rgb(220, 220, 220)"></i> Apple Store</a></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/projet-b3-challenge-48h.webp);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor3__Challenge-48H/tree/main/challenge-48h" target="_blank">Challenge 48h</a></h3>
+                            <span>Bachelor 3</span>
+                            <br>
+                            <span>React</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b3-saga_inc.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor3__Saga" target="_blank">Saga Inc.</a></h3>
+                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor3__Saga" target="_blank">Saga : app mobile</a></h3>
                             <span>Bachelor 3</span>
                             <br>
                             <span>Ionic 6, React, Strapi, Stripe</span>
@@ -157,8 +186,7 @@
                             <span>Go, HTML, CSS</span>
                             <br>
                             <br>
-                            <span><a href="https://www.linkedin.com/posts/aix-ynov-campus_forum-ytracker-is-over-f%C3%A9licitations-activity-6811682018653536256-h88R" target="_blank" title="LinkedIn">🥇</a> Lauréat du 1er prix</span>
-
+                            <span><a href="https://www.linkedin.com/posts/aix-ynov-campus_forum-ytracker-is-over-f%C3%A9licitations-activity-6811682018653536256-h88R" target="_blank" title="LinkedIn" style="color: inherit">🥇 Lauréat du 1er prix</a></span>
                         </div>
                     </div>
                 </div>
