--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                             <div class="counter-wrap">
-                                <span class="number"><span class="countup">6</span></span>
+                                <span class="number">+<span class="countup">15</span></span>
                                 <span class="caption">projets étudiants réalisés</span>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                         </div>
                         <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
                             <div class="counter-wrap">
-                                <span class="number"><span class="countup">800</span></span>
+                                <span class="number"><span class="countup">900</span></span>
                                 <span class="caption">heures de cours</span>
                             </div>
                         </div>
@@ -95,12 +95,12 @@
                     <div class="mt-5 mt-md-0">
                         <span class="subheading">Qui suis-je ?</span>
                         <h2 class="mb-4">Un développeur full-stack junior basé à Aix-en-Provence</h2>
-                        <p class="">Je suis étudiant en seconde année de bachelor à l'école Ynov d'Aix-en-Provence. Je suis formé au réseau, au développement web, au développement d'applications mobiles et à l'ingénièrie logicielle.</p>
+                        <p class="">Je suis étudiant en première année de Master "Expert en développement" à l'école Ynov d'Aix-en-Provence. Je suis un spécialiste du développement web, mobile et de l'UX-UI Design.</p>
                         <div class="row mb-4">
                             <div class="col-lg-6">
                                 <ul class="about-info mt-4 px-md-0 px-2">
                                     <li class="d-flex"><span>Nom :</span> <span>Nicolas Lépinay</span></li>
-                                    <li class="d-flex"><span>Âge :</span> <span>26 ans</span></li>
+                                    <li class="d-flex"><span>Âge :</span> <span>27 ans</span></li>
                                     <li class="d-flex"><span>Lien Linkedin :</span> <span><a href="https://www.linkedin.com/in/nicolas-lepinay/" target="_blank"><i class="fa fa-linkedin"></i></a></span></li>
                                 </ul>
                             </div>
@@ -151,7 +151,16 @@
                     <div class="progress-wrap">
                         <h3>React</h3>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                    <div class="progress-wrap">
+                        <h3>Vue.js</h3>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
                             </div>
                         </div>
                     </div>
@@ -228,6 +237,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+                    <div class="progress-wrap">
+                        <h3>Unity</h3>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
                     <div class="progress-wrap">
                         <h3>SQL</h3>
@@ -246,25 +264,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-                    <div class="progress-wrap">
-                        <h3>Linux</h3>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600" style="opacity:0.6">
-                    <div class="progress-wrap">
-                        <h3>Symfony <i>(en cours)</i></h3>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="5" aria-valuemax="100" style="width:5%">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </section>
