--- a/blog.html
+++ b/blog.html
@@ -63,6 +63,21 @@
         <div class="container-xl">
             <div class="row">
 
+            <!-- ARTICLE : Kouma (nosoft) -->
+                <div class="col-md-6 col-lg-3 d-flex">
+                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <a href="blog-kouma-nosoft.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/kouma-logo.webp');">
+                        </a>
+                        <div class="text">
+                            <p class="meta"> <span>20 avril 2023</span>
+                                <span class="theme">Expérience pro</span>
+                            </p>
+                            <h3 class="heading mb-3"><a href="blog-stage-b2.html">Alternance : mon expérience pro.</a></h3>
+                            <p>L'un de mes travaux en tant que développeur mobile et UX Designer chez NoSoft.</p>
+                        </div>
+                    </div>
+                </div>
+
             <!-- ARTICLE : Stage Flincy (B2) -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
