--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/projet-pro-kouma.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="blog-kouma-nosoft.html" target="_blank">Kouma : app mobile</a></h3>
+                            <h3><a href="blog-kouma-nosoft.html" target="_blank">Kouma - app mobile</a></h3>
                             <span>Expérience professionnelle</span>
                             <br>
                             <span>nosoft</span>
@@ -96,7 +96,7 @@
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b3-saga_inc.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor3__Saga" target="_blank">Saga : app mobile</a></h3>
+                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor3__Saga" target="_blank">Saga - app mobile</a></h3>
                             <span>Bachelor 3</span>
                             <br>
                             <span>Ionic 6, React, Strapi, Stripe</span>
@@ -120,7 +120,7 @@
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-fairfax.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor2__Fairfax" target="_blank">Fairfax</a></h3>
+                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor2__Fairfax" target="_blank">Fairfax - réseau social</a></h3>
                             <span>Bachelor 2</span>
                             <br>
                             <span>React, NodeJS, MongoDB</span>
@@ -156,7 +156,7 @@
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-bluebeard-php.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor2_Bluebeard" target="_blank">Site e-commerce Bluebeard</a></h3>
+                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor2_Bluebeard" target="_blank">Bluebeard - site e-commerce</a></h3>
                             <span>Bachelor 2</span>
                             <br>
                             <span>PHP8, MySQL, HTML, CSS, jQuery</span>
@@ -180,7 +180,7 @@
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-forum_fairfax2.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor1__Forum_Fairfax" target="_blank">Forum Fairfax</a></h3>
+                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor1__Forum_Fairfax" target="_blank">Fairfax - forum</a></h3>
                             <span>Bachelor 1</span>
                             <br>
                             <span>Go, HTML, CSS</span>
