Added Augustin's testimony <3

--- a/about.html
+++ b/about.html
@@ -279,8 +279,28 @@
             <div class="row">
                 <div class="col-md-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                     <div class="carousel-testimony">
-                        <a href="https://www.linkedin.com/posts/aix-ynov-campus_forum-ytracker-is-over-f%C3%A9licitations-activity-6811682018653536256-h88R" target="_blank">
+                        <a href="https://www.linkedin.com/in/augustin-mallet/" target="_blank">
+                            <div class="item">
+                                <div class="testimony-wrap">
+                                    <div class="text">
+                                        <div class="d-flex align-items-center mb-4">
+                                            <div class="user-img" style="background-image: url(images/augustin_mallet.jpg)">
+                                                <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
+                                            </div>
+                                            <div class="ps-3 tx">
+                                                <p class="name">Augustin Mallet</p>
+                                                <span class="position">Cofondateur de nosoft</span>
+                                            </div>
+                                        </div>
+                                        <p class="mb-4 msg" style="color:#999999;">
+                                            Un mélange unique entre un développeur appliqué et un graphiste talentueux. Nicolas apportera cette alchimie à votre entreprise en mettant le « beau » à l’extérieur mais également à l’intérieur de vos projets !
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
 
+                        <a href="https://www.linkedin.com/posts/aix-ynov-campus_forum-ytracker-is-over-f%C3%A9licitations-activity-6811682018653536256-h88R" target="_blank">
                             <div class="item">
                                 <div class="testimony-wrap">
                                     <div class="text">
@@ -325,7 +345,7 @@
             </div>
     </section>
 
-    <footer class="ftco-footer">
+    {# <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -336,7 +356,7 @@
                 </div>
             </div>
         </div>
-    </footer> 
+    </footer>  #}
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
