--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
         </div>
     </section>
 
-    <footer class="ftco-footer">
+    {# <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -157,7 +157,7 @@
                 </div>
             </div>
         </div>
-    </footer> 
+    </footer>  #}
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
