--- a/about.html
+++ b/about.html
@@ -128,140 +128,118 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                     <div class="progress-wrap">
                         <h3>HTML5</h3>
-                        <div class="progress">
+                        <!-- <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
-                                <!-- <span>90%</span> -->
+                                <span>90%</span>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                     <div class="progress-wrap">
                         <h3>SCSS</h3>
-                        <div class="progress">
+                        <!-- <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <div class="progress-wrap">
                         <h3>React</h3>
-                        <div class="progress">
+                        <!-- <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <div class="progress-wrap">
-                        <h3>Vue.js</h3>
-                        <div class="progress">
+                        <h3>Next.js</h3>
+                        <!-- <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <div class="progress-wrap">
                         <h3>nodeJS</h3>
-                        <div class="progress">
+                        <!-- <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <div class="progress-wrap">
-                        <h3>PHP</h3>
-                        <div class="progress">
+                        <h3>Java Spring Boot</h3>
+                        <!-- <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
                             </div>
-                        </div>
+                        </div>  -->
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                     <div class="progress-wrap">
                         <h3>Golang</h3>
-                        <div class="progress">
+                        <!-- <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                     <div class="progress-wrap">
-                        <h3>C++</h3>
-                        <div class="progress">
+                        <h3>PHP</h3>
+                        <!-- <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
-                    <div class="progress-wrap">
-                        <h3>C#</h3>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                     <div class="progress-wrap">
                         <h3>Java</h3>
-                        <div class="progress">
-                            <div class="progress-bar color-5" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                            </div>
-                        </div>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-                    <div class="progress-wrap">
-                        <h3>Python</h3>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
                     <div class="progress-wrap">
                         <h3>Kotlin</h3>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                            </div>
-                        </div>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                     <div class="progress-wrap">
-                        <h3>Unity</h3>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                            </div>
-                        </div>
+                        <h3>Swift</h3>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                     <div class="progress-wrap">
-                        <h3>SQL</h3>
-                        <div class="progress">
-                            <div class="progress-bar color-6" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                            </div>
-                        </div>
+                        <h3>Flutter</h3>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="900">
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                     <div class="progress-wrap">
-                        <h3>MongoDB</h3>
-                        <div class="progress">
-                            <div class="progress-bar color-6" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                            </div>
-                        </div>
+                        <h3>React Native</h3>
+                    </div>
+                </div>
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
+                    <div class="progress-wrap">
+                        <h3>C#</h3>
+                    </div>
+                </div>
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="900">
+                    <div class="progress-wrap">
+                        <h3>Figma</h3>
+                    </div>
+                </div>
+
+                <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="900">
+                    <div class="progress-wrap">
+                        <h3>Adobe Photoshop</h3>
                     </div>
                 </div>
             </div>
