--- a/work.html
+++ b/work.html
@@ -64,6 +64,18 @@
             <div class="row">
 
                 <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b3-flutter-rive.webp);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="https://github.com/nicolas-lepinay/Flutter_Rive_MobileApp/tree/main" target="_blank">Flutter & Rive</a></h3>
+                            <span>Bachelor 3</span>
+                            <br>
+                            <span>Flutter, Rive</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/projet-pro-kouma.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
