UPD CV and experiences

--- a/experience.html
+++ b/experience.html
@@ -72,7 +72,9 @@
                             <span class="date">2023-2025</span>
                             <h2>Mastère en Informatique</h2>
                             <span class="position"><i class="ion-ios-pin me-2"></i>Aix Ynov Campus</span>
-                            <p class="mt-4">A venir.</p>
+                            <p class="mt-4">Gestion de projet IT</p>
+                            <p>Pilotage de stratégie SI</p>
+                            <p>Architecture logicielle</p>
                         </div>
                     </div>
                     <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
@@ -113,8 +115,24 @@
                     <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                         <div class="w-100">
                             <div class="icon"><span class="flaticon-work-from-home"></span></div>
-                            <span class="date">09/2022- 05/2023</span>
-                            <h2>Développeur logiciel et mobile</h2>
+                            <span class="date">09/2023- aujourd'hui</span>
+                            <h2>Développeur mobile</h2>
+                            <span class="position"><i class="ion-ios-pin me-2"></i>Synertic</span>
+                            <p class="mt-4">
+                                Développement et optimisation d’applications cross-platform avec Flutter.
+                            </p>
+                            <p>Utilisation de l’architecture BLoC et des Cubits pour le state management.</p>
+                            <p>Rédaction et exécution de tests unitaires avec Mockito et de tests end-to-end.</p>
+                            <p>Collaboration avec une équipe UX-UI pour garantir une expérience au pixel près.</p>
+                            <p>Garant de la stabilité des apps : troubleshooting et résolution de bugs techniques.</p>
+                        </div>
+                    </div>
+
+                    <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                        <div class="w-100">
+                            <div class="icon"><span class="flaticon-work-from-home"></span></div>
+                            <span class="date">09/2022- 09/2023</span>
+                            <h2>Développeur logiciel</h2>
                             <span class="position"><i class="ion-ios-pin me-2"></i>NoSoft</span>
                             <p class="mt-4">
                                 Développement d'un outil <strong>no-code</strong> de création d'applications. 
@@ -136,16 +154,6 @@
                                 <br>Serveur, API et base de données avec <strong>NodeJS</strong> et <strong>MongoDB</strong>. 
                                 <br>Système de paiement sécurisé avec <strong>Stripe.js</strong>.
                             </p>
-                        </div>
-                    </div>
-
-                    <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-                        <div class="w-100">
-                            <div class="icon"><span class="flaticon-work-from-home"></span></div>
-                            <span class="date">08/2018 - 08/2022</span>
-                            <h2>Réceptionniste</h2>
-                            <span class="position"><i class="ion-ios-pin me-2"></i>Villa Gallici, Hôtel 5* Relais & Châteaux</span>
-                            <p class="mt-4">Accueil téléphonique et physique.<br>Gestion des réservations.<br>Comptabilité.</p>
                         </div>
                     </div>
 
