--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
                         <div class="icon"><span class="flaticon-web-programming"></span></div>
                         <div class="text">
                             <h2>Développement web</h2>
-                            <p>HTML, SCSS, React, Vue, PHP, Go, MySQL, MongoDB</p>
+                            <p>HTML, SCSS, React, Angular, PHP, NestJS, Java Spring</p>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                         <div class="icon"><span class="flaticon-data"></span></div>
                         <div class="text">
                             <h2>Développement logiciel</h2>
-                            <p>Unity, C#, C++, Java, Python</p>
+                            <p>Unity, C#, C++, Java</p>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     </div>
                 </div> -->
 
-                <div class="col-md-3 text-center d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
+                <!-- <div class="col-md-3 text-center d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
                     <div class="services">
                         <div class="icon"><span class="flaticon-ux"></span></div>
                         <div class="text">
@@ -141,7 +141,7 @@
                             <p>Virtualisation, Cisco, Packet Tracer, pFSense</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
